<resources>
    <string name="app_name">Carnet Virtual</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_content_app">Imagen de Aplicación</string>
    <string name="write_username">Ingrese su nombre de usuario</string>
    <string name="write_password">Ingrese su contraseña</string>
    <string name="init_session">Iniciar Sesión</string>
    <string name="register">Registrar Paciente</string>
    <string name="do_login">Iniciando Sesión</string>
    <string name="default_notification_channel_id">channel_notification</string>

    <string name="url_connection">http://10.0.2.2:8000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="error_empty_username">El campo de nombre de usuario</string>
    <string name="error_empty_password">El campo de contraseña se encuentra vacío</string>
    <string name="error_empty_name">El campo de nombre se encuentra vacío</string>
    <string name="error_empty_lastname">El campo de apellido se encuentra vacío</string>
    <string name="error_empty_run">El campo de run se encuentra vacío</string>
    <string name="error_empty_email">El campo de email se encuentra vacío</string>
    <string name="error_empty_token">El campo de token de encuentra vacío</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dialog_info">Información</string>
    <string name="close_dialog">Cerrar</string>
    <string name="close_session_btn">Cerrar Sesión</string>
    <string name="info_close_session">¿Realmente desea cerrar la aplicación?</string>
</resources>