<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_weight="1"
        android:src="@drawable/ic_carnet_virtual"
        android:layout_gravity="center"
        android:contentDescription="@string/image_content_app"
        android:layout_margin="30dp"
        android:scaleType="fitCenter"
        android:layout_width="300dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/layout_username"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/layout_password"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:text="@string/init_session"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/teal_700"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/loading"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="150dp"
            android:layout_height="150dp">
        </ProgressBar>

        <TextView
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            android:textAlignment="center"
            android:text="@string/do_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>