<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.CerrarFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/info_session"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="23sp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_close_session" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeSession"
            android:layout_gravity="center_horizontal"
            android:text="@string/close_session_btn"
            android:backgroundTint="@color/teal_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="150dp"
            android:layout_height="150dp">
        </ProgressBar>

        <TextView
            android:textSize="20sp"
            android:textColor="@color/teal_700"
            android:textAlignment="center"
            android:text="@string/do_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>